--- a/github-sso/github-sso-core/docker/Dockerfile
+++ b/github-sso/github-sso-core/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.cn-beijing.aliyuncs.com/swang/jdk:8
+FROM registry.cn-beijing.aliyuncs.com/swang/jdk8:latest
 VOLUME /tmp
 ADD github-sso-core-0.0.1-SNAPSHOT.jar app.jar
 #RUN bash -c 'touch /app.jar'
