--- a/business-parent/business-sop/docker/Dockerfile
+++ b/business-parent/business-sop/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM registry.cn-beijing.aliyuncs.com/swang/jdk:8
+FROM registry.cn-beijing.aliyuncs.com/swang/jdk8:latest
 VOLUME [/tmp,/logs]
 ADD business-sop-0.0.1-SNAPSHOT.jar app.jar
 #RUN bash -c 'touch /app.jar'
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/usr/local/app.jar"]
 EXPOSE 8801
