--- a/github-admin/src/main/resources/application.yaml
+++ b/github-admin/src/main/resources/application.yaml
@@ -17,3 +17,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka:8761/eureka   
+
+management:
+  security:
+    enabled: false      
