--- a/service-parent/service-project/service-project-core/src/main/resources/application.yaml
+++ b/service-parent/service-project/service-project-core/src/main/resources/application.yaml
@@ -10,6 +10,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka:8761/eureka
+management:
+  security:
+    enabled: false
 spring:
   cloud:
     inetutils:
