user role relationship

--- a/service-parent/service-user/service-user-core/src/main/resources/application.yaml
+++ b/service-parent/service-user/service-user-core/src/main/resources/application.yaml
@@ -40,7 +40,7 @@ spring:
     testOnBorrow: false  
     testOnReturn: false 
   jpa:
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         hbm2ddl:
