--- a/service-parent/service-user/service-user-core/pom.xml
+++ b/service-parent/service-user/service-user-core/pom.xml
@@ -99,5 +99,9 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>1.5.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 	</dependencies>
 </project>
