--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,6 @@
 		<module>github-eureka</module>
 		<module>github-admin</module>
 		<module>github-turbine</module>
+		<module>github-event</module>
 	</modules>
 </project>
