--- a/business-parent/business-gateway/src/main/resources/application.yaml
+++ b/business-parent/business-gateway/src/main/resources/application.yaml
@@ -21,8 +21,8 @@ spring:
 zuul:
   routes:
     users:
-      path: /users/**
-      serviceId: user-service    
+      path: /mgt/**
+      serviceId: business-mgt    
     projects:
-      path: /projects/**  
-      serviceId: project-service
+      path: /sop/**  
+      serviceId: business-sop
