--- a/github-eureka/src/main/resources/application.yaml
+++ b/github-eureka/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8761
+  port: ${EUREKA1_PORT:8761}
 eureka:
   instance:
     hostname: eureka
@@ -8,12 +8,8 @@ eureka:
     registerWithEureka: true #是否注册到服务，单节点不需要开启
     fetchRegistry: false #表示是否从Eureka Server 中获得注册信息，但节点不需要开启
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${EUREKA2_NAME:localhost}:${EUREKA2_PORT:8761}/eureka/
 spring:
-  cloud:
-    inetutils:
-      preferredNetworks:
-        - 10.8
   application:
     name: eureka-service  
 management:
